# blackboard

./: README.md  mkdocs.yml  opencode.jsonc  pyproject.toml  reproduce_joins.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
data/: default.json  hello.json  test.json
data/team_a/: drawing.json
docs/: index.md
features/: README.md  blackboard.feature  box_selection.feature  environment.py  whiteboard.feature
src/: main.py
tests/: README.md  conftest.py  test_app_state.py  test_bug_repro_hand_tool.py  test_connected_line_group_move.py  test_copy_paste.py  test_grid.py  test_layer_drag.py  test_layer_ordering.py  test_layer_reparenting.py  test_line_bidirectional_move.py  test_line_chain_recursive_move.py  test_line_connection.py  test_line_connection_endpoints.py  test_line_connection_resize.py  test_line_to_line_connection.py  test_models.py  test_multiselect_move.py  test_path_move.py  test_polygon.py  test_polygon_orientation.py  test_text_tool_input.py  test_ui_box_selection_tool.py  test_ui_canvas.py  test_ui_canvas_anchors.py  test_ui_canvas_colors.py  test_ui_canvas_modifiers.py  test_ui_canvas_modifiers_interaction.py  test_ui_canvas_rendering.py  test_ui_canvas_resizing.py  test_ui_canvas_resizing_feedback.py  test_ui_canvas_visual_feedback.py  test_ui_drawer.py  test_ui_drawer_groups.py  test_ui_drawer_groups_expansion.py  test_ui_drawer_nested.py  test_ui_eraser.py  test_ui_line_tool.py  test_ui_pen_tool.py  test_ui_polygon_tool.py  (+4 more)
(+36 files in other folders)
